--- a/pages/tipsandtricks.html
+++ b/pages/tipsandtricks.html
@@ -2,9 +2,8 @@
 <html>
 
 <head>
-  <title>What she knows</title>
+  <title>Juliana Araujo</title>
 
-  <!-- <base href="/" /> -->
 
   <meta name="robots" content="noindex">
 
